# 1st_lotto

./: .firebaserc  .gitignore  README.md  firebase.json  lotto_analyzer.py  lotto_scrap.py  start_dev.sh
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache  hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: lotto_history.csv  main.py  pyproject.toml  requirements.txt  weekly_stats.json
frontend/: .gitignore  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/common/: LottoBall.jsx
frontend/src/components/tabs/: AnalysisTab.jsx  HistoryTab.jsx  RecommendTab.jsx  UpdateTab.jsx  WeeklyStatsTab.jsx
frontend/src/constants/: index.js
frontend/src/hooks/: useLottoApi.js
functions/: lotto_history.csv  main.py  requirements.txt
public/: index.html
public/assets/: index-BID88Z9D.css  index-DFQRNvY1.js
shared/: __init__.py  analysis.py  constants.py  firebase_client.py  lotto_api.py  weekly_stats.py
